--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -59,6 +59,7 @@ p {
     margin-bottom: 10px;
 }
 
+
 /* Botões Genéricos */
 .btn {
     display: inline-block;
@@ -157,7 +158,75 @@ p {
     background-color: #e67300;
 }
 
-/*----------------modal inicial-------------------------*/
+/*----------------verificação horarios-------------------------*/
+
+/* O Fundo que cobre a tela inteira */
+.fechado-overlay {
+  display: none; /* Começa invisível, o JS que vai ativar */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.95); /* Fundo preto quase sólido */
+  z-index: 9999; /* Fica acima de TUDO */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #fff;
+  backdrop-filter: blur(5px); /* Desfoca o site atrás (efeito moderno) */
+}
+
+/* A caixinha do texto */
+.fechado-conteudo {
+  background: #1a1a1a;
+  padding: 40px;
+  border: 2px solid var(--primary-color); /* Borda vermelha temática */
+  border-radius: 15px;
+  max-width: 90%;
+  width: 400px;
+  box-shadow: 0 0 20px rgba(255, 0, 0, 0.3);
+}
+.fechado-conteudo a{
+    color: var(--gray-light);
+    font-style: normal;
+    text-decoration: none;
+    background-color: var(--secondary-color);
+    padding: 5px;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-indent: 9px;
+    transition: 0.7s ease-in-out;
+}
+.fechado-conteudo a:hover{
+    color: #3ec050;
+    background-color: var(--gray-light);
+    box-shadow: 0px 0px 5px 3px #3ec050;
+    font-weight: 700;
+}
+
+.fechado-conteudo h2 {
+  color: #ffcc00; /* Amarelo ou vermelho do seu tema */
+  margin-bottom: 15px;
+  font-size: 1.5rem;
+}
+
+.horarios-lista {
+  list-style: none;
+  padding: 0;
+  margin: 20px 0;
+  text-align: left;
+  font-size: 1.1rem;
+}
+
+.horarios-lista li {
+  margin-bottom: 10px;
+  border-bottom: 1px solid #333;
+  padding-bottom: 5px;
+}
+
 /* -------------------------------------------------------------------------- */
 /* 1. CONTAINER DO MODAL (OVERLAY ESCURO E CENTRALIZAÇÃO) */
 /* -------------------------------------------------------------------------- */
