--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -417,10 +417,10 @@ p {
 .offers-carousel {
     margin-top: 60px;
     padding: 6px 0px 40px 0px;
-    background-color: var(--gray-medium);
+    background-color: var(--primary-color);
     overflow: hidden;
     border-radius: 30px;
-    box-shadow: inset 0px 0px 13px 3px var(--secondary-color);
+    box-shadow: inset 0px 0px 13px 3px var(--gray-medium);
 }
 
 .swiper-container {
@@ -461,13 +461,13 @@ p {
 /* Estilos de navegação (setas) */
 .swiper-button-next,
 .swiper-button-prev {
-    color: var(--primary-color);
     top: 50%;
     transform: translateY(-50%);
     width: 30px;
     height: 30px;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.8);
+    color: red;
     transition: background-color 0.3s ease;
 }
 .swiper-button-next:hover,
@@ -497,7 +497,9 @@ p {
 .menu-section {
     padding: 60px 0;
 }
-
+.menu-section-tradicionais {
+    padding: 0px 0;
+}
 .product-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -528,7 +530,7 @@ p {
 }
 
 .product-item h3 {
-    margin: 0 15px 10px;
+    margin: 0 10% 10px;
     color: var(--secondary-color);
     width: 80%;
 }
@@ -1105,5 +1107,19 @@ ease;
         padding: 8px 0;
         text-align: center;
         border-bottom: 1px solid #eee; /* Linha divisória entre links */
+    }
+    .swiper-button-next, .swiper-button-prev {
+    svg {
+        
+        color: RED;
+    }
+}
+    .menu-section-tradicionais .product-grid{
+        margin-bottom: 30px;
+    }
+    .menu-section-tradicionais{
+            padding: 36px 0;
+        background: #CCCCCC;
+    background: linear-gradient(180deg, rgba(204, 204, 204, 0.1) 0%, rgba(250, 170, 70, 0.48) 8%, rgba(255, 140, 0, 0.5) 88%, rgba(204, 204, 204, 10.1) 100%);
     }
 }
